  - fix RPM package file/directory ownership [Joseph Marreo Corchado, Tuomo, #2167]
  - fix seccomp rules to work with Bash 5.3 [Maciej S. Szmigiero, #2371]
* testing:
  - Alpine test domain upgraded to 3.22.2 [Andrew]
  - Debian test domain upgraded to 12.12 [Andrew]
  - Fedora test domain upgraded to f43 [Andrew]
  - FreeBSD test domain upgraded to 14.3 [Andrew, Ueno #2341]

v5.3 (July 3, 2025)
* PKIX (Public Key Infrastructure X.509)
  - moved cURL and LDAP CRL download code out of pluto [Andrew]
  - replaced CRL thread with libevent [Andrew]
  - fixed `ipsec checkcrls` [Andrew]
  - when configured, use cURL to download LDAP CRLs [Andrew]
  - verify using NSS's IPsec profile aka certificateUsageIPsec [Andrew]
  - only verify using certificateUsageSSL{Client,Server} when USE_NSS_TLS_SECURITY_PROFILE [Andrew]
* IKEv2:
  - fix PEXPECT when deleting crossed IKE SA [Andrew, Ilya Maximets #2101, Ondrej Moris #2123]
* IKEv1:
  - fix CISCO's split support (requires cisco-split=yes) [Andrew, Amirreza #2230 Erikas #633]
  - share-lease=yes|no (default yes) to share XAUTH/ModeCfg lease IP on multiple connections [Paul]
* initsystem:
  - remove unused _stackmanager [Tuomo #2080]
  - on BSD, default to syslog(LOG_NOTICE) and not pluto.log [Andrew #2295 #2298]
* config:
  - merge `addconn` (`ipsec.conf`) and `whack` connection option parsers [Andrew]
  - change `whack` to use same connection defaults as `ipsec.conf` [Andrew]
  - support `ipsec addconn --name connname left=1.2.3.4 right=5.6.7.8` (experimental) [Andrew #2138]
  - drop undocumented `ipsec readwriteconf --rootdir` option [Andrew, #2152]
  - obsoleted virtual_private= and plutostderrlog= keywords [Tuomo]
  - warn when END-option= has no END [Andrew #663]
  - nflog= made an alias to nflog-group= [Andrew]
  - recognize ah=... as phase2=ah phase2alg=... [Andrew #712]
* ipsec pluto:
  - make `ipsec.conf`'s `config setup` and pluto options consistent [Andrew]
  - fix `--config file1 --config file2` [Andrew]