@@ -32,7 +32,6 @@ add git
 add bash
 # stem with branch, see pkg_add
 add gcc%11
-add llvm%18
+add llvm%21
 
 sync ; sync ; sync
-
